--- a/Bitacora/Styles/style.css
+++ b/Bitacora/Styles/style.css
@@ -1,21 +1,21 @@
 /*Selector etiqueta <HEADER>. Los cambios sólo le afectaran a esa etiqueta.*/
 header{
+    /*Relleno que se crea alrededor de los bordes del header. Todos sus lados tienen el tamaño de 3px.*/
+    padding: 20px;
     /*Fuente de la letra*/
     font-family: Georgia, 'Times New Roman', Times, serif;
-    /*Tamaño de la fuente a 16px.*/
-    font-size: 16px;
     /*Color de la fuente o texto.*/
+    font-size: 16px;
+    /*Color la fuente o el texto.*/
     color: rgb(255, 255, 255);
     /*Color de fondo usando las medidas o reglas RGB (Red, Green, Blue como colores base).*/
     background-color: rgb(36, 36, 36);
-    /*Relleno que se crea alrededor de los bordes del header. Todos sus lados tienen el tamaño de 3px.*/
-    padding: 3px;
 }
 
-/*Selector etiqueta <BODY>. Los cambios sólo le afectaran a esa etiqueta.*/
+/*Color de fondo usando las medidas o reglas RGB (Red, Green, Blue como colores base).*/
 body{
     /*El color de fondo de la etiqueta susodicha cambiara a unos un tanto grisaceo.*/
-    background-color: rgb(241, 241, 241);
+    background-color: rgb(248, 247, 247);
 }
 
 /*Selector etiqueta <H3>. Los cambios sólo le afectaran a esa etiqueta.*/
@@ -24,6 +24,8 @@ h3{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     /*Tamaño de la fuente a un tamaño absoluto que equivale a 32px.*/
     font-size:xx-large;
+    /*Estilo de borde a las etiquetas "<H3>".*/
+    border-style: groove;
 }
 
 /*Selector etiqueta <P>. Los cambios sólo le afectaran a esa etiqueta.*/
@@ -31,9 +33,9 @@ p{
     /*Fuente de la letra.*/
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     /*Tamaño de la letra.*/
-    font-size: 20px;
-    /*Tipo de alineado: centrado.*/
-    text-align: center;
+    font-size: 17px;
+    /*Tipo de alineado: centrado y justificado para que por ahora el titulo quede igualmente centrado.*/
+    text-align: center, justify;
 }
 
 /*Selector etiqueta <P> pero esta vez que contenga la clase "fecha". Los cambios sólo le afectaran a esa etiqueta
