--- a/Bitacora/Styles/style.css
+++ b/Bitacora/Styles/style.css
@@ -1,50 +1,132 @@
+
+/*Seleccionar todo*/
+*{
+    /*Margen de los lados de TODOS los bloques que conforman al HTML es igual a 0*/
+    margin: 0;
+    /*Area de relleno de los lados de TODOS los bloques que conforman al HTML es igual a 0*/
+    padding: 0;
+
+}
+
+
 /*Selector etiqueta <HEADER>. Los cambios sólo le afectaran a esa etiqueta.*/
 header{
     /*Relleno que se crea alrededor de los bordes del header. Todos sus lados tienen el tamaño de 3px.*/
-    padding: 20px;
-    /*Fuente de la letra*/
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding: 10px;
     /*Color de la fuente o texto.*/
     font-size: 16px;
     /*Color la fuente o el texto.*/
     color: rgb(255, 255, 255);
     /*Color de fondo usando las medidas o reglas RGB (Red, Green, Blue como colores base).*/
-    background-color: rgb(36, 36, 36);
+    background-color: rgb(57, 49, 63);
+    /*Centrar texto*/
+    text-align: center;
+    /*Fuente de la letra*/
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    /*Esoacio entre letras*/
+    letter-spacing: 2.5px;
 }
 
-/*Color de fondo usando las medidas o reglas RGB (Red, Green, Blue como colores base).*/
-body{
-    /*El color de fondo de la etiqueta susodicha cambiara a unos un tanto grisaceo.*/
-    background-color: rgb(248, 247, 247);
-}
-
-/*Selector etiqueta <H3>. Los cambios sólo le afectaran a esa etiqueta.*/
-h3{
-    /*Fuente de la letra.*/
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    /*Tamaño de la fuente a un tamaño absoluto que equivale a 32px.*/
-    font-size:xx-large;
-    /*Estilo de borde a las etiquetas "<H3>".*/
-    border-style: groove;
-}
-
-/*Selector etiqueta <P>. Los cambios sólo le afectaran a esa etiqueta.*/
-p{
-    /*Fuente de la letra.*/
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    /*Tamaño de la letra.*/
-    font-size: 17px;
-    /*Tipo de alineado: centrado y justificado para que por ahora el titulo quede igualmente centrado.*/
-    text-align: center, justify;
-}
-
-/*Selector etiqueta <P> pero esta vez que contenga la clase "fecha". Los cambios sólo le afectaran a esa etiqueta
-que contenga la palabra "fecha".*/
-p.fecha{
-    /*Texto alineado a la derecha.*/
+/*clases llamadas fecha*/
+.fecha{
+    /*Alinear texto a la derecha.*/
     text-align: right;
-    /*Tamaño de la fuente*/
-    font-size: 20px;
-    /*Opacidad de letra de 0.5 (transparencia)*/
-    opacity: 0.5;
+}
+
+/*-----------------------CLASES DE IMAGENES*/
+.img-html{
+    /*Relleno de 50px*/
+    padding: 50px;
+}
+
+.img-github{
+    padding: 50px;
+    
+}
+
+.img-css{
+    padding: 50px;
+}
+
+.img-javascript{
+    padding: 50px;
+}
+
+/*-----------------------------------------------*/
+
+/*Etiquetas Section*/
+section{
+    /*Elemento flexibe que es capaz de alterar sus dimensiones*/
+    display: flex;
+    /*Centrar contenido de la seccion*/
+    justify-content: center;
+    /*Texto justificado*/
+    text-align: justify;
+
+}
+
+/*H3 con clase secciones*/
+.h3-secciones{
+    /*Alinear texto: centrado*/
+    text-align: center;
+}
+
+/*Etiquetas P con clase texto*/
+p.texto{
+    /*Fuente de texto*/
+    font-family: sans-serif;
+    /*Tamaño de fuente*/
+    font-size: large;
+    /*Texto justificado*/
+    text-align: justify;
+    /*quitar al elemento del flujo normal de la página y colocarlo a la izquierda*/
+    float: left;
+    /*Margen  alto, derecho, abajo, izquierdo*/
+    margin:  10px 15px 15px 35px;
+}
+
+/*Etiquetas P con clase fecha*/
+p.fecha{
+    /*Alinear texto a la derecha*/
+    text-align: right;
+    /*Fuente*/
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    /*Tamaño fuente*/
+    font-size:30px;
+    /*Borde*/
+    border:groove;
+    /*Opacidad*/
+    opacity:0.5;
+}   
+
+/*clase subtitulos*/
+.subtitulos{
+    /*tamaño de letra*/
+    font-size: 30px;
+    /*Color de letra*/
+    color: rgb(67, 4, 58);
+    /*Ancho automatico*/
+    width: auto;
+    /*Margen*/
+    margin: 5px 0 5px 15px;
+    /*Relleno*/
+    padding: 20px 0px;
+    /*Flotando a la izquierda*/
+    float: left;
+}
+
+/*Pie de pagina*/
+footer{
+    /*color de fondo*/
+    background-color:rgb(57, 49, 63) ;
+    /*relleno*/
+    padding: 10px;
+    /*color de letra*/
+    color: white;
+    /*Texto al cento*/
+    text-align: center;
+    /*fuente*/
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    /*tamaño*/
+    font-size: 10px;
 }
